--- a/public/css/main.css
+++ b/public/css/main.css
@@ -246,6 +246,7 @@ figure:not(.dark) img, img.white {
   margin-top: -25px;
 }
 .navbar-custom .avatar-container  .avatar-img-border {
+  visibility: hidden;
   width: 100%;
   border-radius: 50%;
   margin-left: -50%;
@@ -255,6 +256,7 @@ figure:not(.dark) img, img.white {
   -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 }
 .navbar-custom .avatar-container  .avatar-img {
+  visibility: hidden;
   width: 100%;
   border-radius: 50%;
   display: block;
@@ -276,6 +278,7 @@ figure:not(.dark) img, img.white {
   }
 
   .navbar-custom .avatar-container  .avatar-img-border {
+    visibility: hidden;
     width: 100%;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
     -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
@@ -283,6 +286,7 @@ figure:not(.dark) img, img.white {
   }
 
   .navbar-custom .avatar-container  .avatar-img {
+    visibility: hidden;
     width: 100%;
   }
 }
